# verify-node-modules

./: README.md
.github/workflows/: csharp.yml  go.yml  rust.yml
CSharp/: DependencyError.cs  JsonAccess.NetCoreApp31.cs  PackageLockDependency.cs  Program.cs
FSharp/: DependencyError.fs  Package.fs  PackageLock.fs  PackageLockDependency.fs  Program.fs  VerifyNodeModules.fsproj  VerifyNodeModulesFSharp.sln
Go/verifyNodeModules/: .gitignore  main.go
JS/: package-lock.json  package.json  tsconfig.json  types.d.ts  verify-node-modules.js
NET/: JsonAccess.Net45.cs  JsonAccess.Net60.cs  JsonAccess.cs  JsonException.cs  PackageJson.cs  PackageLockRoot.cs  Program.cs  VerifyNodeModules.csproj
NET45/: Program.cs  VerifyNodeModules.csproj  VerifyNodeModules.sln
NETCore31/: Program.cs  VerifyNodeModules.csproj
Rust/: .gitignore  Cargo.toml
Rust/src/: errors.rs  main.rs  npm_types.rs
