[package]
name = "verify-node-modules"
version = "0.1.0"
authors = ["Daniel B <daniel.betz@daniel-betz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["fs", "io-util", "macros"] }